# pypitemp

./: README.md  project.toml  pyproject.toml  template.py
